# todo-simple

./: .gitignore  CMakeLists.txt  README.md  todo260606.desktop  xiaou-todo.desktop
backend/: telemetry_daily_rollup.py  telemetry_server.py  xiaou-telemetry-rollup.service  xiaou-telemetry-rollup.timer  xiaou-telemetry.service
qml/: CalendarWindow.qml  EffectOverlayWindow.qml  EffectsTestWindow.qml  EventEditorWindow.qml  ListWindow.qml  NoteWindow.qml  SettingsWindow.qml  SyncDateDialog.qml  Theme.qml  qml.qrc
qml/components/: IconButton.qml  LiquidGlassSurface.qml  PriorityMenu.qml  Toast.qml  WallpaperBackdrop.qml
scripts/: package-deb.sh
src/: CalendarSyncService.cpp  CalendarSyncService.h  EventEditorController.cpp  EventEditorController.h  NoteController.cpp  NoteController.h  TelemetryService.cpp  TelemetryService.h  TodoApp.cpp  TodoApp.h  main.cpp
